tests/integrations/json-basic/tests/actual_tests/match_diagnostic_code.stderr
error[E0308]: mismatched types
 --> tests/actual_tests/match_diagnostic_code.rs:2:19
  |
2 |     let _x: i32 = 0u32;
  |             ---   ^^^^ expected `i32`, found `u32`
  |             |
  |             expected due to this
  |
help: change the type of the numeric literal from `u32` to `i32`
  |
2 |     let _x: i32 = 0i32;
  |                    ~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
